# iot-safe-middleware-pkcs11

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project-build.sh
examples/aws-iot-core/: README.md
examples/aws-iot-core/cpp/: CMakeLists.txt  main.cpp
examples/aws-iot-core/cpp/utils/: CommandLineUtils.h
examples/aws-iot-core/python/: pkcs11_pubsub.py
examples/tls-client/: Makefile  README.md
examples/tls-client/cert/: ca-cert.pem  ca-key.pem  client-cert.pem  client-csr.pem  client-key.pem  server-cert.pem  server-csr.pem  server-key.pem
examples/tls-client/src/: client.c  server.c
se-access-lib/: CMakeLists.txt  libse-gto.h
se-access-lib/cinterion-modem/: CMakeLists.txt
se-access-lib/cinterion-modem/src/: ModemAccess.cpp
se-access-lib/test/: cinterion-modem.cpp  p11-cardmgr-access.cpp
se-pkcs11-lib/: Application.cpp  Array.cpp  CMakeLists.txt  Cache.cpp  CardManager.cpp  CardModuleAPI.cpp  CardModuleAppletIoTSAFE.cpp  Configuration.cpp  DataShare.cpp  Device.cpp  Digest.cpp  EccUtils.cpp  Log.cpp  MiniDriver.cpp  MiniDriverAuthentication.cpp  MiniDriverCardCacheFile.cpp  MiniDriverContainer.cpp  MiniDriverContainerMapFile.cpp  MiniDriverFiles.cpp  MiniDriverModuleService.cpp  MiniDriverPinPolicy.cpp  Module.cpp  PKCS11.cpp  Pkcs11ObjectCertificate.cpp  Pkcs11ObjectCertificateX509PublicKey.cpp  Pkcs11ObjectData.cpp  Pkcs11ObjectKey.cpp  Pkcs11ObjectKeyGenericSecret.cpp  Pkcs11ObjectKeyPrivate.cpp  Pkcs11ObjectKeyPrivateECC.cpp  Pkcs11ObjectKeyPrivateRSA.cpp  Pkcs11ObjectKeyPublic.cpp  Pkcs11ObjectKeyPublicECC.cpp  Pkcs11ObjectKeyPublicRSA.cpp  Pkcs11ObjectKeySecret.cpp  Pkcs11ObjectKeySecretAES.cpp  Pkcs11ObjectStorage.cpp  Session.cpp  Slot.cpp  Template.cpp  (+14 more)
se-pkcs11-lib/config/: Gemalto.PKCS11.ini
se-pkcs11-lib/include/: Application.hpp  Array.h  Cache.h  CardManager.hpp  CardModuleAPI.h  CardModuleApplet.h  CardModuleService.h  Configuration.hpp  DataShare.h  Device.hpp  EccUtils.h  Except.h  Log.hpp  Marshaller.h  MarshallerCfg.h  MarshallerUtil.h  MiniDriver.hpp  MiniDriverAuthentication.hpp  MiniDriverCardCacheFile.hpp  MiniDriverContainer.hpp  MiniDriverContainerMapFile.hpp  MiniDriverException.hpp  MiniDriverFiles.hpp  MiniDriverModuleService.hpp  MiniDriverPinPolicy.hpp  PCSCMissing.h  PKCS11Exception.hpp  Pkcs11ObjectCertificate.hpp  Pkcs11ObjectCertificateX509PublicKey.hpp  Pkcs11ObjectData.hpp  Pkcs11ObjectKey.hpp  Pkcs11ObjectKeyGenericSecret.hpp  Pkcs11ObjectKeyPrivate.hpp  Pkcs11ObjectKeyPrivateECC.hpp  Pkcs11ObjectKeyPrivateRSA.hpp  Pkcs11ObjectKeyPublic.hpp  Pkcs11ObjectKeyPublicECC.hpp  Pkcs11ObjectKeyPublicRSA.hpp  Pkcs11ObjectKeySecret.hpp  Pkcs11ObjectKeySecretAES.hpp  (+28 more)
test/: CMakeLists.txt  aes.c  delete.c  digest.c  ecc.c  ecdh_openssl.c  getinfo.c  main.c  random.c  rsa.c  utils.c
test/include/: aes.h  delete.h  digest.h  ecc.h  ecdh_openssl.h  getinfo.h  random.h  rsa.h  utils.h
test/include/pkcs11/: aes.h  cryptoki.h  pkcs-11v2-20a3.h  pkcs11f.h  pkcs11t.h
